6) dhcpv6: try and generate a default IFID only if an IFID is not configured.<br>
7) dhcpv6: ignore advertise messages with none of requested data and missed status codes.<br>
8) kernel: ralink_wifi: disable 40MHz intolerant support if DRAFT3 undefined.<br>
9) kernel: ralink_hw_nat: exclude UDP bug check for MT7621.<br>
10) kernel: ralink_raeth: fix SG regression.<br>
11) kernel: net: af_packet: make tpacket_rcv to not set status value before run_filter.<br>
12) kernel: net: ipmr,ip6mr: call ip6mr_free_table() on failure path.<br>
13) kernel: net: netfilter: bridge: kill nf_bridge_pad.<br>
14) kernel: net: ipv6: Don't reduce hop limit for an interface.<br>
<br>
<br>
<b>2.8.x</b><br>
1) goahead: fix lang select race in some situations.<br>
2) goahead: fix upload firmware error handling.<br>
3) nvram: fix store old macs.<br>
4) kernel: ralink_raeth: add support MT7621 QDMA, split PDMA/QDMA code, code refactoring.<br>
5) kernel: ralink_raeth: force up MAC for each ESW PHY.<br>
6) kernel: ralink_hw_nat: add support MT7621 QDMA, write FoE descriptors by DWORD chunk.<br>
7) kernel: ralink_hw_nat: add support MT7621 multicast offload.<br>
8) kernel: mips: fix race condition in lazy cache flushing.<br>
9) kernel: conntrack: fix one way voice issue if SIP ALG enabled.<br>
10) kernel: netfilter: fix issue of some SIP Providers use only port 5060 for send/listen calls.<br>
11) kernel: net: less interrupt masking in NAPI.<br>
12) kernel: net: move napi polling code out of net_rx_action.<br>
13) kernel: net: always poll at least one device in net_rx_action.<br>
14) kernel: net: remove k{un}map_skb_frag().<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) need add dsvfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>